Tests/Modules/Error/InHandler/.build/badhandler.pr
{
  "name": "BadHandler",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022handler error\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": "this handler also throws",
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "handler error",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/BadHandler.goal",
  "prPath": "/.build/badhandler.pr",
  "hash": "4a219d8c94d25f14b8b0a5c33a9b4ae0aa0948114da0df9b0ac04a0d7e9cbbe8",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}